[package]
name = "monroe"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
edition = "2021"

[workspace]
members = ["inbox"]

[dependencies]
monroe-inbox = { path = "inbox" }

num_cpus = "1.13"
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }
usync = "0.2"

[features]
default = ["tokio-rt"]

# Underlying actor runtime support.
tokio-rt = ["tokio"]
